Fix CORS policy and origin patterns for production